updates for images

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ p{
 }
 
 body {
-  background-image: url('Resources/Assets/Images/umbrella.gif');
+  background-image: url('Resources/Assets/Images/umbrella.png');
   background-color: #cccccc
 }
 
